<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_walk_forward</name>
  <version>0.0.0</version>
  <description>Example of making the robot walk forward with ROS2</description>
  <maintainer email="engineering@theaiinstitute.com">BD AI Institute</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>bdai_ros2_wrappers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
